--- a/advice.css
+++ b/advice.css
@@ -1,37 +1,61 @@
-* Split the screen in half */
-.split {
-  height: 100%;
-  width: 50%;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  overflow-x: hidden;
-  padding-top: 20px;
+/*h3 {
+    margin-bottom: 300px;
+    margin-left: 100px;
+
+p {
+    margin-bottom: 300px;
+    margin-left: 100px;
+}*/
+
+/* Split the screen in half */
+body{
+    margin: 30px;
+  }
+
+h4 {
+  top: 30px;
+  position: relative;
 }
 
-/* Control the left side */
-.left {
-  left: 0;
-  background-color: #111;
-}
-
-/* Control the right side */
-.right {
-  right: 0;
-  background-color: red;
+ol {
+  position: relative;
+  top: 50px;
 }
 
 /* If you want the content centered horizontally and vertically */
 .centered {
   position: absolute;
-  top: 50%;
+  top: 300px;
   left: 50%;
   transform: translate(-50%, -50%);
-  text-align: center;
+  text-align: left;
+  width: 500px;
 }
 
-/* Style the image inside the centered container, if needed */
-.centered img {
-  width: 150px;
-  border-radius: 50%;
+.image {
+    margin-left: 100px;
+    margin-bottom: 70px;
+    padding: 14px 40px;
+    height: 300px;
+    width: 400px;
 }
+
+.advice {
+    color: #ffffff;
+    background-color: #f9c230;
+    cursor: pointer;
+    text-align: center;
+    font-size: 20px;
+    border-radius: 12px;
+    transition: .15s ease-in-out;
+   	margin-left: 225px;
+    margin-bottom: 10px;
+    padding: 14px 40px;
+}
+
+.advice:hover {
+    background-color: #0069d9;
+}
+
+.advice:focus {
+    box-shadow: 0 0 0 0.2rem rgba(38,143,255,.5);
